Added font awesome library

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,29 +16,26 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
 
+// Typography styles
 h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
 }
 
-.navbar-default .navbar-brand{
-    color: white;
-}
-
-.navbar-default .navbar-brand:hover{
-    color: white;
-    opacity: 0.75;
-}
-
+.navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a{
     color: white;
 }
 
+.navbar-default .navbar-brand:hover,
 .navbar-default .navbar-nav > li > a:hover{
     color: white;
     opacity: 0.75;
 }
 
+// Background gradient
 .home-callout, .navbar {
     // Gradient provided by uiGradients.com
     background: #1488CC;  /* fallback for old browsers */
@@ -53,6 +50,7 @@ h1, h2, h3 {
     padding-top:50px;
 }
 
+// Navbar style
 .navbar{
     border: none;
 }
