--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,3 +54,8 @@ h1, h2, h3 {
 .navbar{
     border: none;
 }
+
+.navbar-brand {
+    font-family: 'Open sans', sans-serif;
+    font-weight: 800;
+}
