--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h1> About me. </h1>
+<div class="container text-center">
+    <h1> About us</h1>
+    <p>Our company focuses on creating exclusive community for 
+    developers and entrepreneurs to meet.</p>
+</div>
